--- a/index.html
+++ b/index.html
@@ -13,18 +13,33 @@
     <!-- Bagian AR.js dengan debug -->
     <a-scene embedded arjs debug="true">
       <!-- Marker untuk mendeteksi gambar tertentu -->
-      <a-marker type="pattern" url="pattern-marker.patt">
+      <a-marker id="marker" type="pattern" url="models/pattern-marker.patt">
         <!-- Objek 3D yang akan ditampilkan saat marker terdeteksi -->
         <a-entity
           gltf-model="url(models/snakefruitbx.glb)"
-          scale="0.5 0.5 0.5"
+          scale="2 2 2"
           position="0 0 0"
-        >
-        </a-entity>
+        ></a-entity>
       </a-marker>
 
       <!-- Kamera untuk melihat AR -->
       <a-entity camera></a-entity>
     </a-scene>
+
+    <!-- Script untuk menangani event marker -->
+    <script>
+      // Mendapatkan elemen marker
+      const marker = document.querySelector("#marker");
+
+      // Event listener saat marker ditemukan
+      marker.addEventListener("markerFound", function () {
+        alert("Marker ditemukan! Objek AR sekarang muncul.");
+      });
+
+      // Event listener saat marker hilang
+      marker.addEventListener("markerLost", function () {
+        alert("Marker hilang. Objek AR tidak lagi terlihat.");
+      });
+    </script>
   </body>
 </html>
