--- a/index.html
+++ b/index.html
@@ -17,11 +17,12 @@
 
       <!-- Marker untuk mendeteksi gambar tertentu -->
       <a-marker id="marker" type="pattern" url="models/pattern-marker.patt">
-        <!-- Model 3D berbentuk GLB -->
+        <!-- Objek 3D berbentuk kubus -->
         <a-entity
-          gltf-model="url(models/snakefruitbx.glb)"
+          geometry="primitive: box; height: 1; width: 1; depth: 1"
+          material="color: blue"
           scale="2 2 2"
-          position="0 0.5 0"
+          position="0 0 0"
         ></a-entity>
       </a-marker>
 
