--- a/index.html
+++ b/index.html
@@ -8,26 +8,57 @@
     <!-- Menghubungkan A-Frame dan AR.js -->
     <script src="https://aframe.io/releases/1.2.0/aframe.min.js"></script>
     <script src="https://cdn.jsdelivr.net/gh/jeromeetienne/AR.js/aframe/build/aframe-ar.js"></script>
+
+    <style>
+      body {
+        margin: 0;
+        padding: 0;
+        overflow: hidden;
+        background-color: #f5f5f5; /* Warna latar belakang netral */
+      }
+      a-scene {
+        width: 100vw;
+        height: 100vh;
+      }
+      a-entity {
+        animation: rotate 5s linear infinite; /* Animasi rotasi */
+      }
+
+      @keyframes rotate {
+        from {
+          rotation: 0 0 0;
+        }
+        to {
+          rotation: 0 360 0;
+        }
+      }
+    </style>
   </head>
-  <body style="margin: 0; overflow: hidden">
+  <body>
     <!-- Bagian AR.js dengan debug -->
-    <a-scene embedded arjs debug="true">
-      <!-- Pencahayaan untuk objek AR lebih terang -->
-      <a-light type="directional" position="0 5 5" intensity="1"></a-light>
+    <a-scene embedded arjs debug="true" renderer="antialias: true; alpha: true">
+      <!-- Pencahayaan tambahan untuk objek AR lebih terang -->
+      <a-light type="directional" position="5 10 5" intensity="0.8"></a-light>
+      <a-light type="ambient" color="#FFF" intensity="0.5"></a-light>
+      <!-- Pencahayaan ambient -->
 
       <!-- Marker untuk mendeteksi gambar tertentu -->
       <a-marker id="marker" type="pattern" url="models/pattern-marker.patt">
-        <!-- Objek 3D berbentuk kubus -->
+        <!-- Objek 3D berbentuk kubus dengan animasi -->
         <a-entity
           geometry="primitive: box; height: 1; width: 1; depth: 1"
-          material="color: blue"
+          material="color: blue; opacity: 0.8; metalness: 0.6; roughness: 0.4;"
           scale="2 2 2"
-          position="0 0 0"
+          position="0 0.5 0"
         ></a-entity>
       </a-marker>
 
       <!-- Kamera untuk melihat AR -->
-      <a-entity camera></a-entity>
+      <a-entity
+        camera
+        position="0 0 3"
+        look-controls="enabled: true"
+      ></a-entity>
     </a-scene>
 
     <!-- Script untuk menangani event marker -->
