--- a/index.html
+++ b/index.html
@@ -14,14 +14,14 @@
         margin: 0;
         padding: 0;
         overflow: hidden;
-        background-color: #f5f5f5; /* Warna latar belakang netral */
+        background-color: #f5f5f5;
       }
       a-scene {
         width: 100vw;
         height: 100vh;
       }
       a-entity {
-        animation: rotate 5s linear infinite; /* Animasi rotasi */
+        animation: rotate 5s linear infinite;
       }
 
       @keyframes rotate {
@@ -38,9 +38,8 @@
     <!-- Bagian AR.js dengan debug -->
     <a-scene embedded arjs debug="true" renderer="antialias: true; alpha: true">
       <!-- Pencahayaan tambahan untuk objek AR lebih terang -->
-      <a-light type="directional" position="5 10 5" intensity="0.8"></a-light>
-      <a-light type="ambient" color="#FFF" intensity="0.5"></a-light>
-      <!-- Pencahayaan ambient -->
+      <a-light type="directional" position="5 10 5" intensity="1"></a-light>
+      <a-light type="ambient" color="#FFF" intensity="0.8"></a-light>
 
       <!-- Marker untuk mendeteksi gambar tertentu -->
       <a-marker id="marker" type="pattern" url="models/pattern-marker.patt">
